--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/prismjs": "^1.26.5",
     "bcryptjs": "^3.0.3",
     "dotenv": "^17.2.3",
+    "isomorphic-dompurify": "^2.9.0",
     "jsonwebtoken": "^9.0.3",
     "lucide-react": "^0.554.0",
     "mysql2": "^3.15.3",
